# attendance-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2020-12-05-072215_create_persons/: up.sql
migrations/2020-12-05-073131_create_attendances/: down.sql  up.sql
src/: actions.rs  handlers.rs  main.rs  models.rs  responses.rs  schema.rs
static/: index.html
web-client/: .gitignore  package-lock.json  package.json
web-client/public/: index.html  manifest.json
web-client/src/: index.tsx
web-client/src/components/: App.tsx  AttendancePage.tsx  MembersPage.tsx
web-client/src/models/: Attendance.ts  Person.ts  PersonWithHistory.ts
web-client/src/utils/: Constants.ts  Functions.ts
