[package]
name = "attendance-tracker"
version = "0.1.0"
authors = ["Bryant Huang <glossa@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
actix-files = "0.4.1"
actix-cors = "0.5.3"

log = "0.4.11"
env_logger = "0.8.2"

serde = { version = "1.0", features = ["derive"] }

diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"

chrono = "0.4.19"

dotenv = "0.15.0"